--- a/apps/examRetake_python/templates/examRetake_python/index.html
+++ b/apps/examRetake_python/templates/examRetake_python/index.html
@@ -17,7 +17,7 @@
         <div class="navbar" style="padding: 10px auto; border-bottom: 1px solid darkgrey;">
                 <div class="navbar-inner">
                     <nav class="container" style="padding: 0px 20px;">
-                    <h3 style="display: inline-block;">Quote Dashboard</h3>
+                    <h3 style="display: inline-block;">Trip Dashboard</h3>
                     <ul class="nav" style="display: inline-block;">
                         <li class="active" style="display: inline-block; font-size: 18px;"><a href="{%url 'go_startpage' %}">Home</a></li>
                         <li class="active" style="display: inline-block; font-size: 18px;"><a href="{%url 'go_login' %}">Sign In</a></li>
@@ -28,7 +28,7 @@
         
             <div class="container" style="padding: 0px 10px;">
                 <div class="jumbotron">
-                    <h1 class="display-4">Welcome to the Quote Dashboard</h1>
+                    <h1 class="display-4">Welcome to the Trip Dashboard</h1>
                     <p class="lead">This application was built using Python and an MTV framework called Django. The pages are of course organized and styled with HTML5 and CSS. There is also some styling with Bootstrap.</p>
                     <hr class="my-4">
                     <p>Built from scratch by Ashwin Chalaka.</p>
@@ -40,16 +40,16 @@
         
             <div class="row" style="padding: 0px 100px; padding-bottom: 20px; border-bottom: 1px solid darkgrey;">
                 <div class="span4" style="width: 315px; display: inline-block; margin: 0px 25px; vertical-align: top;">
-                    <h2>Post Quotations</h2>
-                    <p>Using this application, you'll be able to add, view, like, and remove quotes.</p>
+                    <h2>Create Trips</h2>
+                    <p>Using this application, you'll be able to add, view, join, and remove trips.</p>
                 </div>
                 <div class="span4" style="width: 315px; display: inline-block; margin: 0px 25px; vertical-align: top;">
-                    <h2>Quotations By User</h2>
-                    <p>Users will be able to check other user's pages who have posted and be able to see all that user's quotations.</p>
+                    <h2>Trip Details</h2>
+                    <p>Users will be able to click into trips that are posted and be able to see all that trip's details.</p>
                 </div>
                 <div class="span4" style="width: 315px; display: inline-block; margin: 0px 25px; vertical-align: top;">
-                    <h2>Edit User Information</h2>
-                    <p>Users will be able to edit their information (first name, last name, email, but not their password)</p>
+                    <h2>Edit Your Trip</h2>
+                    <p>Users will be able to edit trip information (destination, description, arrival date, and departure date)</p>
                 </div>
             </div>
     </div>
