--- a/apps/examRetake_python/templates/examRetake_python/tripDetails.html
+++ b/apps/examRetake_python/templates/examRetake_python/tripDetails.html
@@ -26,8 +26,11 @@
     <div class="navbar" style="padding: 10px auto; border-bottom: 1px solid darkgrey;">
         <div class="navbar-inner">
             <nav class="container" style="padding: 0px 20px;">
-            <h3 style="display: inline-block;">{{author.first_name}} {{author.last_name}}</h3>
+            <h3 style="display: inline-block;">{{usr.first_name}} {{usr.last_name}}</h3>
             <ul class="nav" style="display: inline-block;">
+                {% if trp.created_by.id == request.session.loggedIn_id %}
+                    <li class="active" style="display: inline-block; font-size: 18px;"><a href="{%url 'go_editTrip' id=trp.id%}">Edit This Trip</a></li>
+                {% endif %}
                 <li class="active" style="display: inline-block; font-size: 18px;"><a href="{%url 'go_dashboard' %}">Go Back</a></li>
                 <li class="active" style="display: inline-block; font-size: 18px;"><a href="{%url 'processLogout' %}">Logout</a></li>
             </ul>
@@ -36,12 +39,18 @@
     </div>
 
     <div class='body_wrapper'>
-        <h3>Quote Wall -- all posted by {{author.first_name}} {{author.last_name}}</h3>
-        <div class='quoteWall'>
-            {% for x in qts %}
-                <div class="quoteBox">
-                    <p>{{x.author}} - {{x.quote_content}}</p>
-                </div>
+        <h2>{{trp.destination}}</h2>
+        <div style="padding: 10px;">
+            <h4>Planned by: {{trp.created_by.first_name}} {{trp.created_by.last_name}}</h4> 
+            <h4>Description: {{trp.description}}</h4> 
+            <h4>Travel Date From: {{trp.arrivalDate}}</h4> 
+            <h4>Travel Date To: {{trp.departureDate}}</h4> 
+        </div>
+
+        <h2>Other Users Joining this Trip</h2>
+        <div style="padding: 10px;">
+            {% for user in trp_usrs %}
+                <h4>{{user.first_name}} {{user.last_name}}</h4>
             {% endfor %}
         </div>
     </div>
